--- a/cards.css
+++ b/cards.css
@@ -17,10 +17,10 @@ body {
     margin-bottom: 0px;
 }
 
-.card-content {
+/*.card-content {
     /* padding: 24px; */
     padding: 11110px 0px 0px 0px;
-} 
+} */
 
 a {
     text-decoration: none;
