--- a/cards.css
+++ b/cards.css
@@ -2,25 +2,21 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-/*.card {
+/* .card {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    display: flex;
-    align-items: stretch;
-    max-width: 400px;
-    margin: 0 auto;
 } */
 
-
+card-content
 .card-image {
     height: 200px;
     /* object-fit: cover; */
     margin-bottom: 0px;
 }
 
-/*.card-content {
+.card-content {
     /* padding: 24px; */
     padding: 11110px 0px 0px 0px;
-} */
+} 
 
 a {
     text-decoration: none;
